examples/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rho-stripe-app
  namespace: default
spec:
  type: ClusterIP
  selector: { app: rho-stripe-app }
  ports:
    - { port: 80, targetPort: http, name: http }
